Ingress_test -/oneloadbal.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: hello-deployment
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels: 
        app: test
    spec:
      containers:
        - name: hello
          image: gcr.io/google-samples/hello-app:2.0
          ports:
            - containerPort: 8080
---
# apiVersion: v1 
# kind: Service
# metadata:
#   name: hello-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: hello
#   ports:
#     - port: 80
#       targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: zone-printer-deployment
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: zone-printer
          image: gcr.io/google-samples/zone-printer:0.2
          ports:
            - containerPort: 8080
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: zone-printer-service
# spec:
#   type: LoadBalancer
#   selector:
#     app: zone-printer
#   ports:
#     - port: 80
#       targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whereami-deployment
spec:
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.2.6
        resources:
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whereami-service
spec:
  selector:
    app: test
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
