Ingress_test -/whereami.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: whereami
  name: whereami
spec:
  ports:
  - name: 80-8000
    nodePort: 30002
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: whereami
  type: NodePort
status:
  loadBalancer: {}
